Update local mode
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@133328 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/local/directive/devices/alarm.html
+++ b/local/directive/devices/alarm.html
@@ -1,6 +1,6 @@
 <div class="alarm-device-wrap">
   <div class="alarm-header">
-    <img ng-src="{{alarmIcon}}" class="img-responsive device-icon">
+    <img ng-src="{{alarmIcon}}" class="device-icon">
     <div class="alarm-header-info">
       <p>{{ainfo.name}}</p>
       <p>{{ainfo.module}}</p>
