--- a/local/html_route/settings/server_template.html
+++ b/local/html_route/settings/server_template.html
@@ -336,7 +336,7 @@
             <select class="form-select settings-user-list-item" ng-model="user.level" ng-change="server.changeUserLevel(user.email, user.level)">
               <option value="OWNER">Owner</option>
               <option value="ADMIN">Admin</option>
-              <option value="USER">User</option>
+              <!--<option value="USER">User</option>!-->
               <option value="DELETE" class="settings-delet-user">Delete</option>
             </select>
           </td>
