--- a/local/html_route/devices_template.html
+++ b/local/html_route/devices_template.html
@@ -82,7 +82,7 @@
 <section class="display-devices" ng-if="device.allBlacklistedDev.length">
   <h4 data-toggle="collapse" data-target="#blacklisted-list">Blacklisted</h4>
   <div class="collapse" id="blacklisted-list">
-      <devices-dev ng-repeat="dev in device.allBlacklistedDev track by dev.id" devinfo="dev"></devices-dev>
+    <devices-dev ng-repeat="dev in device.allBlacklistedDev track by dev.id" devinfo="dev"></devices-dev>
   </div>
   <hr>
 </section>
@@ -113,7 +113,6 @@
             MJPEG
           </label>
           <input type="text" id="mjpeg-camera" class="form-input" ng-model="device.activeDevice.mjpeg">
-
           <label for="rtsp-camera" class="form-label">
             RTSP
           </label>
@@ -148,7 +147,7 @@
         </button>
       </div>
 
-      <div class="edit-devices-btn-wrap">
+      <div class="add-new-footer">
         <button type="" class="button orange-btn" ng-click="device.closeCustomModal()">
           Cancel
         </button>
@@ -167,30 +166,36 @@
     </div>
     <div class="add-camera-step-1">
       <form type="form" ng-submit="device.addNewCamera()" autocomplete="off" id="add-camera-form">
-        <div class="col-md-6 form-input-wrap">
-          <input type="text" class="hidden-input">
-          <input type="password" class="hidden-input">
-          <label for="add-camera-name" class="form-label">Name</label>
-          <input type="text" id="add-camera-name" class="form-input" required>
+        <div class="col-md-6">
+          <div class="col-xs-6 col-md-12">
+            <input type="text" class="hidden-input">
+            <input type="password" class="hidden-input">
+            <label for="add-camera-name" class="form-label">Name</label>
+            <input type="text" id="add-camera-name" class="form-input" required>
 
-          <label for="add-camera-desc" class="form-label">Description</label>
-          <input type="text" id="add-camera-desc" class="form-input">
+            <label for="add-camera-desc" class="form-label">Description</label>
+            <input type="text" id="add-camera-desc" class="form-input">
+          </div>
+          <div class="col-xs-6 col-md-12">
+            <label for="add-camera-user" class="form-label">Username</label>
+            <input type="text" id="add-camera-user" class="form-input">
 
-          <label for="add-camera-user" class="form-label">Username</label>
-          <input type="text" id="add-camera-user" class="form-input">
-
-          <label for="add-camera-password" class="form-label">Password</label>
-          <input type="password" id="add-camera-password" class="form-input">
+            <label for="add-camera-password" class="form-label">Password</label>
+            <input type="password" id="add-camera-password" class="form-input">
+          </div>
         </div>
-        <div class="col-md-6 form-input-wrap">
-          <label for="add-camera-rtsp" class="form-label">RTSP</label>
-          <input type="text" id="add-camera-rtsp" class="form-input">
+        <div class="col-md-6">
+          <div class="col-xs-6 col-md-12">
+            <label for="add-camera-rtsp" class="form-label">RTSP</label>
+            <input type="text" id="add-camera-rtsp" class="form-input">
 
-          <label for="add-camera-mjpeg" class="form-label">MJPEG</label>
-          <input type="text" id="add-camera-mjpeg" class="form-input">
-
-          <label for="add-camera-snapshot" class="form-label">JPEG Snapshot</label>
-          <input type="text" id="add-camera-snapshot" class="form-input">
+            <label for="add-camera-mjpeg" class="form-label">MJPEG</label>
+            <input type="text" id="add-camera-mjpeg" class="form-input">
+          </div>
+          <div class="col-xs-6 col-md-12">
+            <label for="add-camera-snapshot" class="form-label">JPEG Snapshot</label>
+            <input type="text" id="add-camera-snapshot" class="form-input">
+          </div>
         </div>
       </form>
     </div>
@@ -217,7 +222,7 @@
       <button ng-hide="device.addCamSuccess || device.addCamSuccess === false" type="submit" class="button blue-btn" form="add-camera-form">
         Save and Continue
       </button>
-      <button ng-show="device.addCamSuccess || device.addCamSuccess === false" type="button" class="button settings-save-btn" ng-click="device.restoreAddCamModal(); device.closeCustomModal()">
+      <button ng-show="device.addCamSuccess || device.addCamSuccess === false" type="button" class="button blue-btn" ng-click="device.restoreAddCamModal(); device.closeCustomModal()">
         Exit
       </button>
     </div>
@@ -269,11 +274,13 @@
       <hr>
       <div class="add-remote-radio-select">
         <h4>Remote bridge</h4>
-        <span ng-repeat="remote in device.bridges">
-          <input type="radio" id="add-remote-bridge-{{remote.id}}" value="{{remote.id}}" name="add-remote-bridge" class="form-radio" checked>
-          <label for="add-remote-bridge-{{remote.id}}" class="radio-label"></label>
-          <i>{{remote.name}}</i>
-        </span>
+        <div class="asing-room">
+          <span ng-repeat="remote in device.bridges">
+            <input type="radio" id="add-remote-bridge-{{remote.id}}" value="{{remote.id}}" name="add-remote-bridge" class="form-radio" checked>
+            <label for="add-remote-bridge-{{remote.id}}" class="radio-label"></label>
+            <i>{{remote.name}}</i>
+          </span>
+        </div>
       </div>
     </form>
     <div class="add-new-footer">
