--- a/local/html_route/settings/server_template.html
+++ b/local/html_route/settings/server_template.html
@@ -365,6 +365,7 @@
   </div>
 </div>
 
+<!-- leave srever moadl !-->
 <div class="custom-modal-window leave-server-modal">
   <div class="leave-server-content-wrap">
     <h2 class="color-white">You're about to leave server.</h2>
