--- a/local/index.html
+++ b/local/index.html
@@ -5,14 +5,25 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="mobile-web-app-capable" content="yes">
   <title>NHome</title>
 
+  <!-- manifest file !-->
+  <link rel="manifest" href="manifest.json">
+
+  <!-- icons !-->
+  <link rel="icon" sizes="96x96" href="img/logo/mobile/nhome-icon-xl.png">
+  <link rel="icon" sizes="72x72" href="img/logo/mobile/nhome-icon-l.png">
+  <link rel="icon" sizes="48x48" href="img/logo/mobile/nhome-icon-s.png">
   <!-- favicon -->
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="icon" href="img/favicon.ico" type="image/x-icon">
   <!-- Bootstrap -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link href="css/bootstrap/glyphicons-halflings-regular.svg">
+
+  <!-- material designe icons !-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <!-- Bootstrap color picker !-->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.colorpickersliders.css">
@@ -90,6 +101,7 @@
   <script defer src="js/devices/camera.js"></script>
   <script defer src="js/devices/sensor.js"></script>
   <script defer src="js/devices/devices-dev.js"></script>
+  <script defer src="js/devices/cam-rec.js"></script>
   <script defer src="js/service/googleMaps.js"></script>
   <!--
   <script src="js/devices/ac-remote.js"></script>
